force-app/main/default/objects/Airlines__c/fields/Airlines_Id__c.field-meta.xml
<CustomField>
    <fullName>Airlines_Id__c</fullName>
    <label>Airlines Id</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>