force-app/main/default/objects/Airlines__c/fields/Established__c.field-meta.xml
<CustomField>
    <fullName>Established__c</fullName>
    <label>Established</label>
    <length>5</length>
    <type>Text</type>
</CustomField>