force-app/main/default/objects/Airlines__c/fields/Logo_Image__c.field-meta.xml
<CustomField>
    <fullName>Logo_Image__c</fullName>
    <formula>IMAGE(Logo_URL__c, &quot;Logo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Image</label>
    <type>Text</type>
</CustomField>