force-app/main/default/objects/Airlines__c/fields/Slogan__c.field-meta.xml
<CustomField>
    <fullName>Slogan__c</fullName>
    <label>Slogan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>